# viable-agents

./: .env.example  .gitignore  DEVLOG.md  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
config/: budgets.yaml  models.yaml
config/sources/: watchlist.yaml
config/topology/: vsm.yaml
docs/: ARCHITECTURE.md
src/viable_agents/: __init__.py  cli.py
src/viable_agents/algedonic/: __init__.py
src/viable_agents/evals/: __init__.py
src/viable_agents/kernel/: __init__.py  channels.py
src/viable_agents/posiwid/: __init__.py
src/viable_agents/simulator/: __init__.py
src/viable_agents/sources/: __init__.py
src/viable_agents/systems/: __init__.py
src/viable_agents/systems/s1/: __init__.py
src/viable_agents/systems/s2/: __init__.py
src/viable_agents/systems/s3/: __init__.py
src/viable_agents/systems/s4/: __init__.py
src/viable_agents/systems/s5/: __init__.py
tests/: conftest.py
tests/unit/: test_channels.py  test_mypy_scoping.py
